--- a/index.html
+++ b/index.html
@@ -2,60 +2,63 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <title>Melinda's website</title>
-  <link rel="icon" href="assets/images/favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Melinda's website</title>
+    <link rel="icon" href="assets/images/favicon.ico">
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand">
-        <div class="logo">MI</div>
-      </a>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand">
+                <div class="logo">MI</div>
+            </a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <section>
-      <div class="jumbotron jumbotron-fluid">
+    <main>
+        <section>
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h1 class="display-4">Hi there!</h1>
+                            <p class="lead">My name is Melinda Ivanov, nice to meet you.</p>
+                            <article>
+                                <p>I am a technical-minded full-stack software engineer holding MSc degree in earth
+                                    sciences. My
+                                    experience includes taking major responsibility in academic projects in different
+                                    geospatial modeling and simulation and knowledge in server- and client-side
+                                    technology following quality code principles. My goal is to join a company where I
+                                    have the opportunity to develop user-friendly applications while utilizing both my
+                                    engineering and science qualifications. I have fast learning ability and
+                                    enthusiastic interest in innovative
+                                    techniques. </p>
+                            </article>
+                        </div>
+                        <div class="col-sm-6">
+                            <img src="assets/images/profile.jpg" alt="Profile" class="center">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer mt-auto py-3">
         <div class="container">
-          <div class="row">
-            <div class="col-sm-6">
-              <h1 class="display-4">Hi there!</h1>
-              <p class="lead">My name is Melinda Ivanov, nice to meet you.</p>
-              <article>
-                <p>I am a technical-minded full-stack software engineer holding MSc degree in earth sciences. My
-                  experience includes taking major responsibility in academic
-                  projects in different geospatial modeling and simulation and knowledge in server- and client-side
-                  technology following quality code principles. My goal is to join a company where I have the
-                  opportunity to develop user-friendly applications while utilizing both my engineering and science
-                  qualifications. I have fast learning ability and enthusiastic interest in innovative techniques. </p>
-              </article>
-            </div>
-            <div class="col-sm-6">
-              <img src="assets/images/profile.jpg" alt="Profile" class="center">
-            </div>
-          </div>
+            <span class="text-muted">© 2020 Melinda Ivanov</span>
         </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer mt-auto py-3">
-    <div class="container">
-      <span class="text-muted">© 2020 Melinda Ivanov</span>
-    </div>
-  </footer>
+    </footer>
 </body>
 
 </html>
