--- a/projects.html
+++ b/projects.html
@@ -39,8 +39,7 @@
                                     <img class="card-img-top" src="assets/images/conference.jpg" alt="conference"></a>
                                 <div class="card-body">
                                     <p class="card-text">Applicant registry webservice using Spring Boot, Spring MVC,
-                                        JSP or Thymeleaf and
-                                        HTML.</p>
+                                        JSP or Thymeleaf and HTML.</p>
                                 </div>
                             </div>
                         </div>
@@ -53,16 +52,15 @@
                                     <img class="card-img-top" src="assets/images/hangman.png" alt="hangman"> </a>
                                 <div class="card-body">
                                     <p class="card-text">Implementing an evil hangman application which manages and
-                                        modifies the state of
-                                        the game on-the-fly and it tries to trick the user. It starts the game with a
-                                        set of words instead
-                                        of one word and reduces the set to the words what are less likely to be
-                                        discovered after each guess, until the
-                                        player looses or only one word is in the set.</p>
+                                        modifies the state of the game on-the-fly and it tries to trick the user. It
+                                        starts the game with a
+                                        set of words instead of one word and reduces the set to the words what are less
+                                        likely to be
+                                        discovered after each guess, until the player looses or only one word is in the
+                                        set.</p>
                                 </div>
                             </div>
                         </div>
-
                         <div class="col-sm-4">
                             <div class="card">
                                 <a href="https://github.com/jnsmelinda/Recipe-book">
@@ -74,8 +72,7 @@
                                         alt="Recipe-book"></a>
                                 <div class="card-body">
                                     <p class="card-text">REST based CRUDS webservice using Spring Data REST (Spring
-                                        Boot, Spring MVC, Spring Data,
-                                        JPA).</p>
+                                        Boot, Spring MVC, Spring Data, JPA).</p>
                                 </div>
                             </div>
                         </div>
@@ -103,10 +100,9 @@
                                     <img class="card-img-top" src="assets/images/guitar.jpeg" alt="guitarhero"></a>
                                 <div class="card-body">
                                     <p class="card-text">Guitar simulator that allows the user to play on a guitar by
-                                        using the
-                                        keyboard of the computer ("keytar"). The application constructs notes on the
-                                        chromatic scale and the
-                                        client can play these notes by pressing different keys on the keyboard.</p>
+                                        using the keyboard of the computer ("keytar"). The application constructs notes
+                                        on the chromatic scale and the client can play these notes by pressing different
+                                        keys on the keyboard.</p>
                                 </div>
                             </div>
                         </div>
@@ -119,12 +115,10 @@
                                     <img class="card-img-top" src="assets/images/tree.jpeg" alt="20Questions"></a>
                                 <div class="card-body">
                                     <p class="card-text">Implementing a yes-no question game in which the player thinks
-                                        of an object and
-                                        the
-                                        computer tries to guess it by asking yes-no questions. The computer becomes
-                                        smarter after each
-                                        failed round
-                                        and learns the new question-answer pair to win more future games.</p>
+                                        of an object and the computer tries to guess it by asking yes-no questions. The
+                                        computer becomes
+                                        smarter after each failed round and learns the new question-answer pair to win
+                                        more future games.</p>
                                 </div>
                             </div>
                         </div>
@@ -153,7 +147,8 @@
                                     <img class="card-img-top" src="assets/images/husky.jpg" alt="junglegame"></a>
                                 <div class="card-body">
                                     <p class="card-text">Implementing a game/simulation with animals in it like a
-                                        jungle. Each species move and behave in different ways in the 2D environment. They meet, feed, move, sleep and
+                                        jungle. Each species move and behave in different ways in the 2D environment.
+                                        They meet, feed, move, sleep and
                                         kill each other until only one kind of animal will rule the jungle.</p>
                                 </div>
                             </div>
@@ -176,18 +171,19 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                          <div class="card">
-                            <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer">
-                              <H1>DNA Analyzer</H1>
-                            </a>
-                            <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer">
-                              <img class="card-img-top" src="assets/images/dna.webp" alt="DNAanalyzer"></a>
-                            <div class="card-body">
-                              <p class="card-text">Implementing a DNA analyzing application that reads data from the National Center for
-                                Biotechnology Information and provides statistics about nucleotides and predicts whether or not the
-                                sequence is a protein-coding gene.</p>
+                            <div class="card">
+                                <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer">
+                                    <H1>DNA Analyzer</H1>
+                                </a>
+                                <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer">
+                                    <img class="card-img-top" src="assets/images/dna.webp" alt="DNAanalyzer"></a>
+                                <div class="card-body">
+                                    <p class="card-text">Implementing a DNA analyzing application that reads data from
+                                        the National Center for Biotechnology Information and provides statistics about
+                                        nucleotides and predicts
+                                        whether or not the sequence is a protein-coding gene.</p>
+                                </div>
                             </div>
-                          </div>
                         </div>
                     </div>
                 </div>
