--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,12 @@
             <div class='col-sm-6'>
               <form>
                 <div class="form-group">
-                  <label for="subject">Email</label>
-                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                  <label for="email-address">Email</label>
+                  <input type="email" class="form-control" id="email-address" placeholder="name@example.com">
                 </div>
                 <div class="form-group">
-                  <label for="subject">Message</label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                  <label for="message">Message</label>
+                  <textarea class="form-control" id="message" rows="3"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
