--- a/contact.html
+++ b/contact.html
@@ -2,63 +2,64 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <title>Melinda's website</title>
-  <link rel="icon" href="assets/images/favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Melinda's website</title>
+    <link rel="icon" href="assets/images/favicon.ico">
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand">
-        <div class="logo">MI</div>
-      </a>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand">
+                <div class="logo">MI</div>
+            </a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <section>
-      <div class="jumbotron jumbotron-fluid">
+    <main>
+        <section>
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <div class="row">
+                        <div class='col-sm-6'>
+                            <h1 class="display-4">Let's connect!</h1>
+                            <a href="https://www.linkedin.com/in/melinda-ivanov/"> <img border="0" alt="Linkedin"
+                                    src="assets/images/LI-In-Bug.png" class="linkedin"></a>
+                        </div>
+                        <div class='col-sm-6'>
+                            <form>
+                                <div class="form-group">
+                                    <label for="email-address">Email</label>
+                                    <input type="email" class="form-control" id="email-address"
+                                        placeholder="name@example.com">
+                                </div>
+                                <div class="form-group">
+                                    <label for="message">Message</label>
+                                    <textarea class="form-control" id="message" rows="3"></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer mt-auto py-3">
         <div class="container">
-          <div class="row">
-            <div class='col-sm-6'>
-              <h1 class="display-4">Let's connect!</h1>
-              <a href="https://www.linkedin.com/in/melinda-ivanov/"> <img border="0" alt="Linkedin"
-                  src="assets/images/LI-In-Bug.png" class="linkedin"></a>
-            </div>
-            <div class='col-sm-6'>
-              <form>
-                <div class="form-group">
-                  <label for="email-address">Email</label>
-                  <input type="email" class="form-control" id="email-address" placeholder="name@example.com">
-                </div>
-                <div class="form-group">
-                  <label for="message">Message</label>
-                  <textarea class="form-control" id="message" rows="3"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </form>
-            </div>
-          </div>
+            <span class="text-muted">© 2020 Melinda Ivanov</span>
         </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer mt-auto py-3">
-    <div class="container">
-      <span class="text-muted">© 2020 Melinda Ivanov</span>
-    </div>
-  </footer>
+    </footer>
 </body>
 
 </html>
