--- a/contact.html
+++ b/contact.html
@@ -36,15 +36,13 @@
                                     src="assets/images/LI-In-Bug.png" class="linkedin"></a>
                         </div>
                         <div class='col-sm-6'>
-                            <form>
+                            <form action="mailto:jns.melinda@gmail.com" method="GET">
                                 <div class="form-group">
-                                    <label for="email-address">Email</label>
-                                    <input type="email" class="form-control" id="email-address"
-                                        placeholder="name@example.com">
-                                </div>
-                                <div class="form-group">
-                                    <label for="message">Message</label>
-                                    <textarea class="form-control" id="message" rows="3"></textarea>
+                                    <label for="email-subject">Subject</label>
+                                    <input name="subject" class="form-control" id="email-subject" placeholder="Hi Melinda! Let's Connect">
+
+                                    <label for="email-body">Message</label>
+                                    <textarea name="body" class="form-control" id="email-body" rows="3"></textarea>
                                 </div>
                                 <button type="submit" class="btn btn-primary">Submit</button>
                             </form>
