--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
                         <div class="col-sm-4">
                             <div class="card">
                                 <a href="https://github.com/jnsmelinda/conference-application">
-                                    <H1>Conference registry</H1>
+                                    <h1>Conference registry</h1>
                                 </a>
                                 <a href="https://github.com/jnsmelinda/conference-application">
                                     <img class="card-img-top" src="assets/images/conference.jpg" alt="conference"></a>
@@ -46,7 +46,7 @@
                         <div class="col-sm-4">
                             <div class="card">
                                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
-                                    <H1>Hangman</H1>
+                                    <h1>Hangman</h1>
                                 </a>
                                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
                                     <img class="card-img-top" src="assets/images/hangman.png" alt="hangman"> </a>
@@ -64,7 +64,7 @@
                         <div class="col-sm-4">
                             <div class="card">
                                 <a href="https://github.com/jnsmelinda/Recipe-book">
-                                    <H1>Recipe book</H1>
+                                    <h1>Recipe book</h1>
                                 </a>
                                 <a href="https://github.com/jnsmelinda/Recipe-book">
                                     <img class="card-img-top"
@@ -81,7 +81,7 @@
                         <div class="col-sm-4">
                             <div class="card">
                                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/Huffman">
-                                    <H1>Huffmann coding</H1>
+                                    <h1>Huffmann coding</h1>
                                 </a>
                                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/Huffman">
                                     <img class="card-img-top" src="assets/images/binary-tree.png" alt="Huffman"></a>
@@ -94,7 +94,7 @@
                         <div class="col-sm-4">
                             <div class="card">
                                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/GuitarHero">
-                                    <H1>Guitar Hero</H1>
+                                    <h1>Guitar Hero</h1>
                                 </a>
                                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/GuitarHero">
                                     <img class="card-img-top" src="assets/images/guitar.jpeg" alt="guitarhero"></a>
@@ -109,7 +109,7 @@
                         <div class="col-sm-4">
                             <div class="card">
                                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/20Questions">
-                                    <H1>20 Questions</H1>
+                                    <h1>20 Questions</h1>
                                 </a>
                                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/20Questions">
                                     <img class="card-img-top" src="assets/images/tree.jpeg" alt="20Questions"></a>
@@ -127,7 +127,7 @@
                         <div class="col-sm-4">
                             <div class="card">
                                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AnagramSolver">
-                                    <H1>Anagram solver</H1>
+                                    <h1>Anagram solver</h1>
                                 </a>
                                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AnagramSolver">
                                     <img class="card-img-top" src="assets/images/fractal3.png" alt="anagram"></a>
@@ -140,10 +140,10 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="card">
-                                <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/JungleGame">
-                                    <H1>Jungle game</H1>
+                                <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/JungleGame/src">
+                                    <h1>Jungle game</h1>
                                 </a>
-                                <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/JungleGame">
+                                <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/JungleGame/src">
                                     <img class="card-img-top" src="assets/images/husky.jpg" alt="junglegame"></a>
                                 <div class="card-body">
                                     <p class="card-text">Implementing a game/simulation with animals in it like a
@@ -156,7 +156,7 @@
                         <div class="col-sm-4">
                             <div class="card">
                                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
-                                    <H1>Assassin manager</H1>
+                                    <h1>Assassin manager</h1>
                                 </a>
                                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
                                     <img class="card-img-top" src="assets/images/LinkedList-in-Java.png"
@@ -173,7 +173,7 @@
                         <div class="col-sm-4">
                             <div class="card">
                                 <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer">
-                                    <H1>DNA Analyzer</H1>
+                                    <h1>DNA Analyzer</h1>
                                 </a>
                                 <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer">
                                     <img class="card-img-top" src="assets/images/dna.webp" alt="DNAanalyzer"></a>
