--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                                     src="assets/images/LI-In-Bug.png" class="linkedin"></a>
                         </div>
                         <div class='col-sm-6'>
-                            <form action="mailto:jns.melinda@gmail.com" method="GET">
+                            <form action="mailto:jns.melinda@gmail.com" method="GET" target="top">
                                 <div class="form-group">
                                     <label for="email-subject">Subject</label>
                                     <input name="subject" class="form-control" id="email-subject" placeholder="Hi Melinda! Let's Connect">
