--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                                     <label for="email-body">Message</label>
                                     <textarea name="body" class="form-control" id="email-body" rows="3"></textarea>
                                 </div>
-                                <button type="submit" class="btn btn-primary">Submit</button>
+                                <button type="submit" class="btn btn-primary">Send</button>
                             </form>
                         </div>
                     </div>
