--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                     <div class="row">
                         <div class='col-sm-6'>
                             <h1 class="display-4">Let's connect!</h1>
-                            <a href="https://www.linkedin.com/in/melinda-ivanov/"> <img border="0" alt="Linkedin"
+                            <a href="https://www.linkedin.com/in/melinda-ivanov/"> <img alt="Linkedin"
                                     src="assets/images/LI-In-Bug.png" class="linkedin"></a>
                         </div>
                         <div class='col-sm-6'>
