adding link to logo and modifying cards spacing

--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand">
+            <a class="navbar-brand" href="index.html">
                 <div class="logo">MI</div>
             </a>
             <ul>
@@ -31,33 +31,37 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/Earthquake_Tracker" class="nav-link">
+                            <a href="https://github.com/jnsmelinda/Earthquake_Tracker">
                                 <div class="card">
                                     <h1>EarthQuake Tracker</h1>
                                     <img class="card-img-top" src="assets/images/earthquake.jpg" alt="earthquake">
                                     <div class="card-body">
                                         <p class="card-text">Interactive website to help concerned citizens see where
-                                            earthquakes are happening around the globe.</p>
+                                            earthquakes are happening around the globe.
+                                        </p>
+                                        <a href="https://jnsmelinda.github.io/Earthquake_Tracker">Check it out</a>
                                     </div>
                                 </div>
                             </a>
                         </div>
 
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/Weather-Dashboard" class="nav-link">
+                            <a href="https://github.com/jnsmelinda/Weather-Dashboard">
                                 <div class="card">
                                     <h1>Weather Dashboard</h1>
                                     <img class="card-img-top" src="assets/images/weather.png" alt="Weather-Dashboard">
                                     <div class="card-body">
                                         <p class="card-text">Weather dashboard to allow the user to search for
                                             location and the
-                                            app displays the current weather and 5 days forecast on the screen.</p>
+                                            app displays the current weather and 5 days forecast on the screen.
+                                        </p>
+                                        <a href="https://jnsmelinda.github.io/Earthquake_Tracker">Check it out</a>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/Password-generator" class="nav-link">
+                            <a href="https://github.com/jnsmelinda/Password-generator">
                                 <div class="card">
                                     <h1>Password Generator</h1>
                                     <img class="card-img-top" src="assets/images/password.png" alt="Password-generator">
@@ -66,7 +70,9 @@
                                             password
                                             length (8-128) and the strength of the password (lower case, upper case,
                                             numerical,
-                                            special characters), then displays the generated password on the screen.</p>
+                                            special characters), then displays the generated password on the screen.
+                                        </p>
+                                        <a href="https://jnsmelinda.github.io/Password-generator">Check it out</a>
                                     </div>
                                 </div>
                             </a>
@@ -74,7 +80,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/conference-application" class="nav-link">
+                            <a href="https://github.com/jnsmelinda/conference-application">
                                 <div class="card">
                                     <h1>Conference registry</h1>
                                     <img class="card-img-top" src="assets/images/conference.jpg" alt="conference">
@@ -86,7 +92,7 @@
                             </a>
                         </div>
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager" class="nav-link">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
                                 <div class="card">
                                     <h1>Hangman</h1>
                                     <img class="card-img-top" src="assets/images/hangman.png" alt="hangman">
@@ -103,7 +109,7 @@
                             </a>
                         </div>
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/Recipe-book" class="nav-link">
+                            <a href="https://github.com/jnsmelinda/Recipe-book">
                                 <div class="card">
                                     <h1>Recipe book</h1>
                                     <img class="card-img-top" src="assets/images/recipe-book-free-clipart-recipe-clip-art-300_300.jpg" alt="Recipe-book">
@@ -117,7 +123,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/Huffman" class="nav-link">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/Huffman">
                                 <div class="card">
                                     <h1>Huffmann coding</h1>
                                     <img class="card-img-top" src="assets/images/binary-tree.png" alt="Huffman">
@@ -129,7 +135,7 @@
                             </a>
                         </div>
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/GuitarHero" class="nav-link">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/GuitarHero">
                                 <div class="card">
                                     <h1>Guitar Hero</h1>
                                     <img class="card-img-top" src="assets/images/guitar.jpeg" alt="guitarhero">
@@ -143,7 +149,7 @@
                             </a>
                         </div>
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/20Questions" class="nav-link">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/20Questions">
                                 <div class="card">
                                     <h1>20 Questions</h1>
                                     <img class="card-img-top" src="assets/images/tree.jpeg" alt="20Questions">
@@ -159,7 +165,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AnagramSolver" class="nav-link">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AnagramSolver">
                                 <div class="card">
                                     <h1>Anagram solver</h1>
                                     <img class="card-img-top" src="assets/images/fractal3.png" alt="anagram">
@@ -172,7 +178,7 @@
                             </a>
                         </div>
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/JungleGame/src" class="nav-link">
+                            <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/JungleGame/src">
                                 <div class="card">
                                     <h1>Jungle game</h1>
                                     <img class="card-img-top" src="assets/images/husky.jpg" alt="junglegame">
@@ -186,7 +192,7 @@
                             </a>
                         </div>
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager" class="nav-link">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
                                 <div class="card">
                                     <h1>Assassin manager</h1>
                                     <img class="card-img-top" src="assets/images/LinkedList-in-Java.png" alt="assassination">
@@ -201,7 +207,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer" class="nav-link">
+                            <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer">
                                 <div class="card">
                                     <h1>DNA Analyzer</h1>
                                     <img class="card-img-top" src="assets/images/dna.webp" alt="DNAAnalyzer">
